--- a/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/src/app/pages/login/login.component.css
+++ b/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/src/app/pages/login/login.component.css
@@ -5,6 +5,7 @@
 .login-centering-wrapper {
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -40,11 +41,6 @@
     justify-content: center;
 }
 
-.login-inputs-container {
-    height: 100px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+p {
+    font-size: 14px;
 }
