Advanced on the sign in page

--- a/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/src/app/directives/login-form/login-form.component.css
+++ b/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/src/app/directives/login-form/login-form.component.css
@@ -45,3 +45,9 @@
     font-size: 14px;
     font-weight: bold;
 }
+
+.invalid-user-errormessage {
+    color: red;
+    font-size: 12px;
+    margin-bottom: 13px;
+}
