--- a/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/src/app/directives/login-form/login-form.component.html
+++ b/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/src/app/directives/login-form/login-form.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   
+  <div *ngIf="validAuth == false" class="invalid-user-errormessage">Your authentication information is incorrect.</div>
   <div class="login-inputs-container">
     <span class="ui-float-label login-input">
       <input pInputText id="username" class="login-input" type="text" formControlName="username"> 
@@ -13,7 +14,7 @@
   <p-checkbox id="remember-me" [formControl]="loginForm.controls['rememberMe']" binary="true" label="Rememeber Me"></p-checkbox>
   
   <div class="login-sign-in-btn-wrapper">
-    <button id="sign-in-btn" label="Sign in" type="submit">Sign in</button>
+    <button id="sign-in-btn" label="Sign in" type="submit" [disabled]="!loginForm.valid">Sign in</button>
   </div>
 
 </form>
