--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/home/home.component.css
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/home/home.component.css
@@ -1,3 +1,9 @@
+/* Disabling anchor properties */
+a, a:visited, a:hover, a:active {
+    color: inherit !important;
+    text-decoration: inherit !important;
+}
+
 .home-page-container {
     height: 100%;
 }
