--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/dashboard/dashboard.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/dashboard/dashboard.component.html
@@ -3,6 +3,5 @@
     <p>
       dashboard works!
     </p>
-    <p-button label="CreateTaskDefinition" (onClick)="onCreateTaskDefinition()"></p-button>
-    <p-button label="RunTask" (onClick)="onRunTask()"></p-button>
+    <p-button label="Sign Out" (onClick)="onSignOut()"></p-button>
 </div>
