--- a/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/home/home.component.html
+++ b/Applications/WebApplication/WebApplication/ClientApp/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="bg-img" id="bg-img-1">
     <div class="enter-btn-wrapper">
       <div class="enter-btn">
-        <a routerLink="/login">Get Started</a>
+        <a routerLink="/dashboard">Get Started</a>
       </div>
     </div>
   </div>
